# practice_work_flow

./: .env  crewai_flow.html  final_output.md  output.md  output.txt  pyproject.toml
src/practice/: basic_flow.py  evalutor.py  flow_and.py  orche.py  parallel_or.py  route.py
